methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:12: error: type mismatch;
 found   : Unit
 required: Boolean
return
^