methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  while (vuBiscuit == false){
    for (i <- 1 to 6){
      if (estSurBiscuit){
        vuBiscuit = true
      }
      avance()
    }
    recule(6)
  }
return
}